--- a/src/main/config/IrpProtocols.ini
+++ b/src/main/config/IrpProtocols.ini
@@ -266,7 +266,9 @@ This protocol signals repeats by the use of <A href="#repeat">dittos</A>.
 [protocol]
 name=DirecTV
 #usable=no
-irp={38k,600,msb}<1,-1|1,-2|2,-1|2,-2>(5,(5,-2,D:4,F:8,C:4,1,-50)+){C=7*(F:2:6)+5*(F:2:4)+3*(F:2:2)+(F:2)}[D:0..15,F:0..255]
+#irp={38k,600,msb}<1,-1|1,-2|2,-1|2,-2>(5,(5,-2,D:4,F:8,C:4,1,-50)+){C=7*(F:2:6)+5*(F:2:4)+3*(F:2:2)+(F:2)}[D:0..15,F:0..255]
+#irp={38k,600,msb}<1,-1|1,-2|2,-1|2,-2>(10,-2,D:4,F:8,C:4,1,-50,(5,-2,D:4,F:8,C:4,1,-50)*){C=7*(F:2:6)+5*(F:2:4)+3*(F:2:2)+(F:2)}[D:0..15,F:0..255]
+irp={38k,600,msb}<1,-1|1,-2|2,-1|2,-2>([10][5],-2,D:4,F:8,C:4,1,-50){C=7*(F:2:6)+5*(F:2:4)+3*(F:2:2)+(F:2)}[D:0..15,F:0..255]
 #irp={38k,600,msb}<1,-1|1,-2|2,-1|2,-2>(5,(5,-2,D:4,F:8,C:4,1,-50),(5,-2,D:4,F:8,C:4,1,-50)+){C=7*(F:2:6)+5*(F:2:4)+3*(F:2:2)+(F:2)}[D:0..15,F:0..255]
 EFC_translation=MSB
 [documentation]
@@ -1877,6 +1879,11 @@ irp={38.4k,413}<1,-1|1,-3>(8,-4,20:8,99:8,0:8,16:8,16:8,254:8,9:8,48:8,H:8,J:8, 
 [A:0..15,wOn:0..1,B:0..15, C:0..15,D:0..15,E:0..15,tOff:0..1024,tOn:0..1024,fOff:0..1,fOn:0..1]
 [documentation]
 Protocol for Fujitsu inverter air conditioning. See http://www.remotecentral.com/cgi-bin/mboard/rc-discrete/thread.cgi?4894
+
+[protocol]
+name=Serial
+irp={,83.3}<1|-1>(1:1,data:8,0:1) [B:0..255]
+[documentation]
 
 [protocol]
 name=Roku-Official
