--- a/src/main/config/IrpProtocols.ini
+++ b/src/main/config/IrpProtocols.ini
@@ -452,7 +452,7 @@ Decoder for a nonstandard Xbox remote.
 
 [protocol]
 name=Humax 4Phase
-irp={56k,105, msb}<-2,2|-3,1|1,-3|2,-2>(T=0,(2,-2,D:6,S:6,T:2,F:7,~F:1,^95m,T=1)+)  [D:0..63, S:0..63, F:0..127]
+irp={56k,105, msb}<-2,2|-3,1|1,-3|2,-2>(T=0,(2,-2,D:6,S:6,T:2,F:7,~F:1,^95m,T=1)*)  [D:0..63, S:0..63, F:0..127]
 [documentation]
 See http://www.hifi-remote.com/forums/viewtopic.php?t=14219 .
 
@@ -626,7 +626,7 @@ This is not a robust protocol, so <A href="#spurious">spurious decodes</A> are l
 name=MCE
 alt_name=RC6-6-32
 usable=yes
-irp={36k,444,msb}<-1,1|1,-1>((6,-2,1:1,6:3,-2,2,OEM1:8,OEM2:8,T:1,D:7,F:8,^107m)+,T=1-T) {OEM1=128,OEM2=S}[D:0..127,S:0..255,F:0..255,T@:0..1=0]
+irp={36k,444,msb}<-1,1|1,-1>((6,-2,1:1,6:3,-2,2,OEM1:8,S:8,T:1,D:7,F:8,^107m)*,T=1-T) {OEM1=128}[D:0..127,S:0..255,F:0..255,T@:0..1=0]
 [documentation]
 MCE is a member of the RC6 family.  Technically it is RC6-6-32 with
 the standard toggle bit zero, with the OEM1 field equal to 128, and
@@ -962,7 +962,7 @@ protocol.
 [protocol]
 name=RC6
 UEI_protocol=0058
-irp={36k,444,msb}<-1,1|1,-1>((6,-2,1:1,0:3,<-2,2|2,-2>(T:1),D:8,F:8,^107m)+,T=1-T) [D:0..255,F:0..255,T@:0..1=0]
+irp={36k,444,msb}<-1,1|1,-1>((6,-2,1:1,0:3,<-2,2|2,-2>(T:1),D:8,F:8,^107m)*,T=1-T) [D:0..255,F:0..255,T@:0..1=0]
 EFC_translation=MSB
 [documentation]
 RC6 is the name used for the first member of the RC6 family of
@@ -972,7 +972,7 @@ display that as simply "RC6"
 [protocol]
 name=RC6-6-20
 #usable=no
-irp={36k,444,msb}<-1,1|1,-1>((6,-2,1:1,6:3,<-2,2|2,-2>(T:1),D:8,S:4,F:8,-100m)+,T=1-T)[D:0..255,S:0..15,F:0..255,T@:0..1=0]
+irp={36k,444,msb}<-1,1|1,-1>((6,-2,1:1,6:3,<-2,2|2,-2>(T:1),D:8,S:4,F:8,-100m)*,T=1-T)[D:0..255,S:0..15,F:0..255,T@:0..1=0]
 EFC_translation=MSB
 [documentation]
 This protocol is commonly used in Sky and Sky+ remotes.  As of version
