--- a/src/main/config/IrpProtocols.ini
+++ b/src/main/config/IrpProtocols.ini
@@ -49,7 +49,7 @@ Very similar to RC5, except AdNotam uses two start bits, and no toggle bit.
 
 [protocol]
 name=AirAsync
-#usable=no
+usable=no
 #irp={37.7k,840}<1|-1>( 1,B:8,-2 ... )
 irp={37.7k,840}<1|-1>(N=0,(1,B:8:N,-2,N=N+8)+) [B:0..99999]
 # This is the version from Graham's document
@@ -1325,7 +1325,7 @@ irp={38.8k,400}<3,-3|3,-7>(6,-7,D:8,F:8,3,-60m)[D:0..255,F:0..255]
 [protocol]
 name=Solidtek16
 usable=yes
-irp={38k}<-624,468|468,-624>(S=0,(1820,-590,0:1,D:4,F:7,S:1,C:4,1:1,-143m,S=1)3) {C= F:4:0 + F:3:4 + 8*S } [D:0..15, F:0..127])
+irp={38k}<-624,468|468,-624>(S=0,(1820,-590,0:1,D:4,F:7,S:1,C:4,1:1,-143m,S=1)3) {C= F:4:0 + F:3:4 + 8*S } [D:0..15, F:0..127]
 [documentation]
 This is a keyboard protocol.  The make/break bit is decoded into the subdevice field.
 
@@ -1807,12 +1807,17 @@ this protocol, 2200 for house A etc. up to 2215 for house "P".
 
 [protocol]
 name=rs200
+#irp={35.7k,msb}<50p,-120p|21p,-120p>( \
+#d = D-1, \
+#h1 = H1-1, h2 = H2-1, h3 = H3-1, h4 = H4-1, \
+#P=~(#d+#F):1, \
+#sum=9+(h4*4+h3) + (h2*4+h1) + (P*8+d) + F*4, \
+#25:6,h4:2,h3:2,h2:2,h1:2,P:1,d:3,F:2,0:2,sum:4,-1160p)* \
+#[H1:1..4, H2:1..4, H3:1..4, H4:1..4, D:1..6, F:0..2]
 irp={35.7k,msb}<50p,-120p|21p,-120p>( \
-d = D-1, \
-h1 = H1-1, h2 = H2-1, h3 = H3-1, h4 = H4-1, \
-P=~(#d+#F):1, \
-sum=9+(h4*4+h3) + (h2*4+h1) + (P*8+d) + F*4, \
-25:6,h4:2,h3:2,h2:2,h1:2,P:1,d:3,F:2,0:2,sum:4,-1160p)* \
+    25:6,(H4-1):2,(H3-1):2,(H2-1):2,(H1-1):2,P:1,(D-1):3,F:2,0:2,sum:4,-1160p)* \
+{   P=~(#(D-1)+#F):1, \
+    sum=9+((H4-1)*4+(H3-1)) + ((H2-1)*4+(H1-1)) + (P*8+(D-1)) + F*4} \
 [H1:1..4, H2:1..4, H3:1..4, H4:1..4, D:1..6, F:0..2]
 [documentation]
 This protocol is/was used by the so-called RS-200 RF (433MHz)
