--- a/src/main/config/IrpProtocols.ini
+++ b/src/main/config/IrpProtocols.ini
@@ -151,7 +151,7 @@ IRDecode v2.43 distinguishes between Amino and Zaptor in order of priority by 1)
 [protocol]
 name=Anthem
 UEI_protocol=0123
-irp={38.0k,605}<1,-1|1,-3>((8000u,-4000u,D:8,S:8,F:8,C:8,1,-25m)3, -75m)* { C=~(D+S+F+255):8} [D:0..255,S:0..255,F:0..255]
+irp={38.0k,605}<1,-1|1,-3>((8000u,-4000u,D:8,S:8,F:8,C:8,1,-25m)2, 8000u,-4000u,D:8,S:8,F:8,C:8,1,-100)* { C=~(D+S+F+255):8} [D:0..255,S:0..255,F:0..255]
 [documentation]
 Anthem framing is very similar to NEC, and also uses 32 bits of data. However, the leadout is much shorter. The signal is sent at least 3 times. Anthem usually splits F into a 2 bit unit number, and a 6 bit function number.
 
@@ -1187,9 +1187,12 @@ This is a moderately robust protocol, but <A href="#spurious">spurious decodes</
 [protocol]
 name=Samsung36
 UEI_protocol=01B5
-irp={38k,500}<1,-1|1,-3>(9,-9,D:8,S:8,1,-9,E:4,F:8,-68u,~F:8,1,-118)*[D:0..255,S:0..255,F:0..255,E:0..15]
-EFC_translation=LSB
-TODO=the -68u gap is a bitch when recognizing.
+#irp={38k,500}<1,-1|1,-3>(9,-9,D:8,S:8,1,-9,E:4,F:8,-68u,~F:8,1,-118)*[D:0..255,S:0..255,F:0..255,E:0..15]
+#EFC_translation=LSB
+#TODO=the -68u gap is a bitch when recognizing.
+irp={37.9k,560,33%}<1,-1|1,-3>(4500u,-4500u,D:8,S:8,1,-9,E:4,F:8,~F:8,1,^108m)*[D:0..255,S:0..255,F:0..255,E:0..15]
+[documentation]
+http://elektrolab.wz.cz/katalog/samsung_protocol.pdf
 
 [protocol]
 name=Sampo
@@ -1884,11 +1887,6 @@ irp={38.4k,413}<1,-1|1,-3>(8,-4,20:8,99:8,0:8,16:8,16:8,254:8,9:8,48:8,H:8,J:8, 
 [A:0..15,wOn:0..1,B:0..15, C:0..15,D:0..15,E:0..15,tOff:0..1024,tOn:0..1024,fOff:0..1,fOn:0..1]
 [documentation]
 Protocol for Fujitsu inverter air conditioning. See http://www.remotecentral.com/cgi-bin/mboard/rc-discrete/thread.cgi?4894
-
-[protocol]
-name=Serial
-irp={,83.3}<1|-1>(1:1,data:8,0:1) [B:0..255]
-[documentation]
 
 [protocol]
 name=Roku-Official
