--- a/src/main/config/IrpProtocols.ini
+++ b/src/main/config/IrpProtocols.ini
@@ -1500,8 +1500,11 @@ Very similar to RECS80-0045, except on duration is longer
 
 [protocol]
 name=Velodyne
-irp={38k,136,msb}<210u,-760u>\
-(<0:1|0:1,-1|0:1,-2|0:1,-3|0:1,-4|0:1,-5|0:1,-6|0:1,-7|0:1,-8|0:1,-9|0:1,-10|0:1,-11|0:1,-12|0:1,-13|0:1,-14|0:1,-15>(T=0,(S:4:4,~C:4,S:4,15:4,D:4,T:4,F:8,210u,-79m,T=8)+)) \
+#irp={38k,136,msb}<210u,-760u>\
+#(<0:1|0:1,-1|0:1,-2|0:1,-3|0:1,-4|0:1,-5|0:1,-6|0:1,-7|0:1,-8|0:1,-9|0:1,-10|0:1,-11|0:1,-12|0:1,-13|0:1,-14|0:1,-15>(T=0,(S:4:4,~C:4,S:4,15:4,D:4,T:4,F:8,210u,-79m,T=8)+)) \
+irp={38k,136,msb} \
+<210u,-760u|210u,-896u|210u,-1032u|210u,-1168u|210u,-1304u|210u,-1449u|210u,-1576u|210u,-1712u|210u,-1848u|210u,-1984u|210u,-2120u|210u,-2256u|210u,-2392u|210u,-2528u|210u,-2664u|210u,-2800u> \
+([T=0][T=8],S:4:4,~C:4,S:4,15:4,D:4,T:4,F:8,210u,-79m) \
 {C=(8+S:4+S:4:4+15+D+T+F:4+F:4:4)&15} \
 [D:0..15,S:0..255,F:0..255]
 [documentation]
@@ -1562,13 +1565,9 @@ handled automatically by the remote.  The newer UEI protocol, with PID
 
 [protocol]
 name=XMPMeta
-irp={38k,136,msb}<210u,-760u> \
-( \
-<0:1|0:1,-1|0:1,-2|0:1,-3|0:1,-4|0:1,-5|0:1,-6|0:1,-7|0:1,-8|0:1,-9|0:1,-10|0:1,-11|0:1,-12|0:1,-13|0:1,-14|0:1,-15> \
-  (T=0, \
-     (S:4:4,C1:4,S:4,15:4,OEM:8,D:8,210u,-13.8m,S:4:4,C2:4,T:4,S:4,FF:16,210u,-80.4m,T=8)+ \
-  ) \
-) \
+irp={38k,136,msb} \
+<210u,-760u|210u,-896u|210u,-1032u|210u,-1168u|210u,-1304u|210u,-1449u|210u,-1576u|210u,-1712u|210u,-1848u|210u,-1984u|210u,-2120u|210u,-2256u|210u,-2392u|210u,-2528u|210u,-2664u|210u,-2800u> \
+([T=0][T=8],S:4:4,C1:4,S:4,15:4,OEM:8,D:8,210u,-13.8m,S:4:4,C2:4,T:4,S:4,FF:16,210u,-80.4m) \
 { C1=-(S+S::4+15+OEM+OEM::4+D+D::4), \
   C2=-(S+S::4+T+FF+FF::4+FF::8+FF::12) \
 } \
@@ -1576,7 +1575,11 @@ irp={38k,136,msb}<210u,-760u> \
 
 [protocol]
 name=XMP
-irp=XMPMeta{FF=F}[F:0..65535,D:0..255,S:0..255,OEM:0..255=68]
+irp={38k,136,msb} \
+<210u,-760u|210u,-896u|210u,-1032u|210u,-1168u|210u,-1304u|210u,-1449u|210u,-1576u|210u,-1712u|210u,-1848u|210u,-1984u|210u,-2120u|210u,-2256u|210u,-2392u|210u,-2528u|210u,-2664u|210u,-2800u> \
+([T=0][T=8],S:4:4,C1:4,S:4,15:4,OEM:8,D:8,210u,-13.8m,S:4:4,C2:4,T:4,S:4,F:16,210u,-80.4m) \
+{ C1=-(S+S::4+15+OEM+OEM::4+D+D::4), C2=-(S+S::4+T+F+F::4+F::8+F::12) } \
+[F:0..65535,D:0..255,S:0..255,OEM:0..255=68]
 UEI_protocol=016C
 [documentation]
 IRP notation (without final frame): {38k,136,msb}<210,-760>(<0:1|0:1,-1|0:1,-2|0:1,-3|0:1,-4|0:1,-5|0:1,-6|0:1,-7|0:1,-8|0:1,-9|0:1,-10|0:1,-11|0:1,-12|0:1,-13|0:1,-14|0:1,-15>(T=0,(S:4:4,C1:4,S:4,15:4,OEM:8,D:8,210u,-13.8m,S:4:4,C2:4,T:4,S:4,F:16,210u,-80.4m,T=8)+)){C1=-(S+S::4+15+OEM+OEM::4+D+D::4),C2=-(S+S:4+T+F+F::4+F::8+F::12)}
@@ -1669,14 +1672,29 @@ OBC values, as described with the IRP notation above.
 
 [protocol]
 name=XMP-1
-irp=XMPMeta{FF=F*256}[D:0..255, S:0..255, F:0..255, OEM:0..255=68]
+irp={38k,136,msb} \
+<210u,-760u|210u,-896u|210u,-1032u|210u,-1168u|210u,-1304u|210u,-1449u|210u,-1576u|210u,-1712u|210u,-1848u|210u,-1984u|210u,-2120u|210u,-2256u|210u,-2392u|210u,-2528u|210u,-2664u|210u,-2800u> \
+([T=0][T=8],S:4:4,C1:4,S:4,15:4,OEM:8,D:8,210u,-13.8m,S:4:4,C2:4,T:4,S:4,(F*256):16,210u,-80.4m) \
+{ C1=-(S+S::4+15+OEM+OEM::4+D+D::4), \
+  C2=-(S + S::4 + T + 256*F + 16*F + F + F::4) } \
+[D:0..255, S:0..255, F:0..255, OEM:0..255=68]
+
+#XMPMeta{FF=F*256}
 
 [protocol]
 name=XMP-2
-irp=XMPMeta{FF=F:8}[D:0..255, S:0..255, F:0..255, OEM:0..255=68]
+irp={38k,136,msb} \
+<210u,-760u|210u,-896u|210u,-1032u|210u,-1168u|210u,-1304u|210u,-1449u|210u,-1576u|210u,-1712u|210u,-1848u|210u,-1984u|210u,-2120u|210u,-2256u|210u,-2392u|210u,-2528u|210u,-2664u|210u,-2800u> \
+([T=0][T=8],S:4:4,C1:4,S:4,15:4,OEM:8,D:8,210u,-13.8m,S:4:4,C2:4,T:4,S:4,F:16,210u,-80.4m) \
+{ C1=-(S+S::4+15+OEM+OEM::4+D+D::4), \
+  C2=-(S+S::4+T+F+F::4+F::8+F::12) } \
+[D:0..255, S:0..255, F:0..255, OEM:0..255=68]
+
+#XMPMeta{FF=F:8}
 
 [protocol]
 name=XMPFinalFrameMeta
+useable=no
 irp={38k,136,msb}<210u,-760u> \
 ( \
 <0:1|0:1,-1|0:1,-2|0:1,-3|0:1,-4|0:1,-5|0:1,-6|0:1,-7|0:1,-8|0:1,-9|0:1,-10|0:1,-11|0:1,-12|0:1,-13|0:1,-14|0:1,-15> \
@@ -1691,20 +1709,31 @@ irp={38k,136,msb}<210u,-760u> \
 
 [protocol]
 name=XMPff
-irp=XMPFinalFrameMeta{FF=F}[F:0..65535,D:0..255,S:0..255,OEM:0..255=68]
+irp={38k,136,msb} \
+<210u,-760u|210u,-896u|210u,-1032u|210u,-1168u|210u,-1304u|210u,-1449u|210u,-1576u|210u,-1712u|210u,-1848u|210u,-1984u|210u,-2120u|210u,-2256u|210u,-2392u|210u,-2528u|210u,-2664u|210u,-2800u> \
+([T=0][T=8][T=9],S:4:4,C1:4,S:4,15:4,OEM:8,D:8,210u,-13.8m,S:4:4,C2:4,T:4,S:4,F:16,210u,[-80.4m][-80.4m][-13.8m]) \
+{ C1=-(S+S::4+15+OEM+OEM::4+D+D::4), \
+  C2=-(S+S::4+T+F+F::4+F::8+F::12) } \
+[F:0..65535,D:0..255,S:0..255,OEM:0..255=68]
 UEI_protocol=016C
 
 [protocol]
 name=XMPff-1
-irp=XMPFinalFrameMeta{FF=F*256}[D:0..255, S:0..255, F:0..255, OEM:0..255=68]
+irp={38k,136,msb} \
+<210u,-760u|210u,-896u|210u,-1032u|210u,-1168u|210u,-1304u|210u,-1449u|210u,-1576u|210u,-1712u|210u,-1848u|210u,-1984u|210u,-2120u|210u,-2256u|210u,-2392u|210u,-2528u|210u,-2664u|210u,-2800u> \
+([T=0][T=8][T=9],S:4:4,C1:4,S:4,15:4,OEM:8,D:8,210u,-13.8m,S:4:4,C2:4,T:4,S:4,(F*256):16,210u,[-80.4m][-80.4m][-13.8m]) \
+{ C1=-(S+S::4+15+OEM+OEM::4+D+D::4), \
+  C2=-(S + S::4 + T + 256*F + 16*F + F + F::4) } \
+[D:0..255, S:0..255, F:0..255, OEM:0..255=68]
 
 [protocol]
 name=XMPff-2
-irp=XMPMeta{FF=F:8}[D:0..255, S:0..255, F:0..255, OEM:0..255=68]
-
-
-[protocol]
-name=XX
+irp={38k,136,msb} \
+<210u,-760u|210u,-896u|210u,-1032u|210u,-1168u|210u,-1304u|210u,-1449u|210u,-1576u|210u,-1712u|210u,-1848u|210u,-1984u|210u,-2120u|210u,-2256u|210u,-2392u|210u,-2528u|210u,-2664u|210u,-2800u> \
+([T=0][T=8][T=9],S:4:4,C1:4,S:4,15:4,OEM:8,D:8,210u,-13.8m,S:4:4,C2:4,T:4,S:4,F:16,210u,[-80.4m][-80.4m][-13.8m]) \
+{ C1=-(S+S::4+15+OEM+OEM::4+D+D::4), \
+  C2=-(S+S::4+T+F+F::4+F::8+F::12) } \
+[D:0..255, S:0..255, F:0..255, OEM:0..255=68]
 
 [protocol]
 name=Zaptor-36
