--- a/pom.xml
+++ b/pom.xml
@@ -147,7 +147,7 @@
                     </execution>
                    </executions>
             </plugin>
-            
+
             <plugin>
                 <!-- Copy resources  in src/main/config to target dir. -->
                 <artifactId>maven-resources-plugin</artifactId>
@@ -225,7 +225,7 @@
                 <version>2.19.1</version>
                 <configuration>
                     <!--groups>x</groups-->
-                    <skipTests>false</skipTests>
+                    <skipTests>true</skipTests>
                     <argLine>-Djava.library.path=/usr/local/lib64 -Dfile.encoding=${project.build.sourceEncoding}</argLine>
                 </configuration>
             </plugin>
@@ -268,6 +268,12 @@
             <artifactId>stringtemplate</artifactId>
             <scope>compile</scope>
         </dependency-->
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>ST4</artifactId>
+            <version>4.0.8</version>
+            <scope>compile</scope>
+        </dependency>
         <dependency>
             <groupId>com.beust</groupId>
             <artifactId>jcommander</artifactId>
