--- a/src/main/config/IrpProtocols.ini
+++ b/src/main/config/IrpProtocols.ini
@@ -14,7 +14,7 @@ The version of the file is declared in a [version] section.
 As is probably already clear, content before the first section is ignored.
 
 [version]
-2016-10-17
+2016-12-01
 [protocol]
 name=48-NEC1
 irp={38.4k,564}<1,-1|1,-3>(16,-8,D:8,S:8,F:8,~F:8,E:8,~E:8,1,^108m,(16,-4,1,^108m)*)\
@@ -144,7 +144,8 @@ This is a moderately robust protocol, but <A href="#spurious">spurious decodes</
 
 [protocol]
 name=Blaupunkt
-irp={30.3k,512}<-1,1|1,-1>(1,-5,1023:10,-44,(1,-5,1:1,F:6,D:3,-236)+,1,-5,1023:10,-44) [F:0..63,D:0..7]
+irp={30.3k,528}<-1,1|1,-1>(1,-5,1023:10,-39,1,-5,1:1,F:6,D:3,-230)[F:0..63,D:0..7]
+#irp={30.3k,512}<-1,1|1,-1>(1,-5,1023:10,-44,(1,-5,1:1,F:6,D:3,-236)+,1,-5,1023:10,-44) [F:0..63,D:0..7]
 
 [protocol]
 name=Bose
@@ -518,8 +519,6 @@ irp={38.4k,416,msb}<1,-6|1,-12>(D:4,C:1,F:7,1,-26)* {C = (#F+1)&1} [D:0..15,F:0.
 EFC_translation=MSB prepended with C bit.
 
 This is a moderately robust protocol, but <A href="#spurious">spurious decodes</A> are still possible.
-
-Note(BM): "odd parity ..." needs extension to IRP(?)
 [protocol]
 name=Lutron
 usable=no
