--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
                             <includes>
                                 <include>Version.xml</include>
                             </includes>
-                            <stylesheet>${project.build.directory}/../../harctoolboxbundle/tools/mkVersion.xsl</stylesheet>
+                            <stylesheet>${project.build.directory}/../tools/mkVersion.xsl</stylesheet>
                             <parameters>
                                 <parameter>
                                     <name>version</name>
