--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ email: false
 language: java
 jdk:
 - oraclejdk8
+before_install:
+- sudo add-apt-repository ppa:dns/gnu -y
+- sudo apt-get update -qq
 install:
 - sudo apt-get install -y --force-yes python-requests
 script:
