--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,10 @@
                                     <directory>src/main/config</directory>
                                     <filtering>true</filtering>
                                 </resource>
+                                <resource>
+                                    <directory>src/main/resources</directory>
+                                    <filtering>false</filtering>
+                                </resource>
                             </resources>
                         </configuration>
                     </execution>
@@ -224,7 +228,7 @@
                 <version>2.19.1</version>
                 <configuration>
                     <skipTests>false</skipTests>
-                    <argLine>-Djava.library.path=/usr/local/lib64 -Dfile.encoding=${project.build.sourceEncoding}</argLine>
+                    <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
                 </configuration>
             </plugin>
         </plugins>
